-------------------------- aqp 1.9.1 (2015-11-18) --------------------------
* groupedProfilePlot() gains some new arguments and better documentation

-------------------------- aqp 1.9 (2015-08-26) --------------------------
* added neutral colors to munsell2rgb()
* new function guessGenHzLevels()
* new function aggregateColor() and associated helper function sharpshootR::aggregateColorPlot()
* more code clean-up and fixes in examples to make R CMD check --as-cran happy
* fixed some ancient examples in the profileApply() manual page
* this is the last major update before aqp 2.0, expecting a major re-write of core SoilProfileCollection class and methods

-------------------------- aqp 1.8-5 (2015-04-17) --------------------------
* bug fixes and documentation updates
* digest::digest is now imported by default
* better documentation for unique-method of SoilProfileCollection objects

-------------------------- aqp 1.8-3 (2015-03-02) --------------------------
* updated documentation
* plotSPC gets a new argument: `x.idx.offset`: allows for plotting of multiple SPC objects within the same figure, see examples
* plotSCP gets a new argument: `plot.depth.axis`: enable / disable depth axis, useful for multi-collection plots
* new function: `profileGroupLabels`: simple annotation for groups of profiles within a profile sketch, see manual page for examples
* new function: `plotMultipleSPC`: plot several SPC objects on the same axis, see manual page for examples

-------------------------- aqp 1.7-11 (2015-01-30) --------------------------
* fixed bugs in addBrackets(), panel.depth_function(), and plotSPC()
* new arguments to addBrackets() allow for annotation of brackets

-------------------------- aqp 1.7-10 (2015-01-15) --------------------------
* names() method for SoilProfileCollection objects returns a concatenated vector of horizon + site names
* siteNames() and horizonNames() can now be used to extract from SoilProfileCollection